<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>
		4.0.0
	</modelVersion>
	<parent>
		<groupId>
			org.springframework.boot
		</groupId>
		<artifactId>
			spring-boot-starter-parent
		</artifactId>
		<version>
			3.5.0
		</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>
	<groupId>
		com.cdl
	</groupId>
	<artifactId>
		kata
	</artifactId>
	<version>
		0.0.1-SNAPSHOT
	</version>
	<packaging>
		war
	</packaging>
	<name>
		kata
	</name>
	<description>
		Kata
	</description>
	<url />
	<licenses>
		<license />
	</licenses>
	<developers>
		<developer />
	</developers>
	<scm>
		<connection />
		<developerConnection />
		<tag />
		<url />
	</scm>
	<properties>
		<java.version>
			21
		</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-web
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-tomcat
			</artifactId>
			<scope>
				provided
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-test
			</artifactId>
			<scope>
				test
			</scope>
		</dependency>
		<dependency>
			<groupId>
				org.springframework.boot
			</groupId>
			<artifactId>
				spring-boot-starter-validation
			</artifactId>
		</dependency>
		<dependency>
			<groupId>
				com.fasterxml.jackson.core
			</groupId>
			<artifactId>
				jackson-databind
			</artifactId>
		</dependency>
		
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>
					org.springframework.boot
				</groupId>
				<artifactId>
					spring-boot-maven-plugin
				</artifactId>
				<!--
				<configuration>
				<excludes>
				<exclude>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				</exclude>
				</excludes>
				</configuration>
				-->
			</plugin>
		</plugins>
	</build>
</project>
